search template formatted results

--- a/GradeTracker/templates/GradeTracker/searchTemplates.html
+++ b/GradeTracker/templates/GradeTracker/searchTemplates.html
@@ -19,7 +19,7 @@
 
 <div id="accordion" >
 {% for course in results %}
-   <h3>{{ result.student.Institution }} : {{result.course_code }} : {{result.course_name}}</h3>
+   <h3>{{ course.student.Institution }} : {{course.course_code }} : {{course.course_name}}</h3>
    <div>
    	<ul>
 		<ol><span style="margin-left:-30px"><strong>Activties:</strong></span>
