search template formatted results

--- a/GradeTracker/templates/GradeTracker/searchTemplates.html
+++ b/GradeTracker/templates/GradeTracker/searchTemplates.html
@@ -33,9 +33,9 @@
 			<li>None</li>
 		{% endfor %}
 		</ol>
-		<li>
-			<a href="/GT/{{ student.id }}/{{ course.id }}/">Add Activities</a>
-		</li>
+		<h3>
+			<a href="/GT/{{ student.id }}/{{ course.id }}/">Add This Activity To Your Page</a>
+		</h3>
 	</ul>
     </div>
 {% endfor %}
