set all accoridans to default to all closed

--- a/GradeTracker/templates/GradeTracker/basepage.html
+++ b/GradeTracker/templates/GradeTracker/basepage.html
@@ -59,7 +59,7 @@
   });
   $(function() {
     $( "#accordion" ).accordion({
-      collapsible: true
+      collapsible: true,
       active: false
     });
   });
