template adding funcitonality

--- a/GradeTracker/templates/GradeTracker/searchTemplates.html
+++ b/GradeTracker/templates/GradeTracker/searchTemplates.html
@@ -34,7 +34,7 @@
 		{% endfor %}
 		</ol>
 		<h3>
-			<a href="/GT/{{ student.id }}/{{ course.id }}/">Add This Activity To Your Page</a>
+			<a href="/GT/addtemplate/{{ course.id }}/">Add This Activity To Your Page</a>
 		</h3>
 	</ul>
     </div>
