--- a/GradeTracker/static/GradeTracker/style.css
+++ b/GradeTracker/static/GradeTracker/style.css
@@ -301,3 +301,12 @@ input::-webkit-inner-spin-button {
     -webkit-appearance: none;
     margin: 0; /* <-- Apparently some margin are still there even though it's hidden */
 }
+
+.total
+{ 
+  width : 100%
+}
+
+#tdslider{
+	width:10%;
+}
