--- a/GradeTracker/templates/GradeTracker/activities.html
+++ b/GradeTracker/templates/GradeTracker/activities.html
@@ -17,7 +17,10 @@
    <div>
 	<ul>
 		<li>
-			{{ subactivity.subgrade_weight }}
+			Weighted percentage : {{ subactivity.subgrade_weight }}
+		</li>
+		<li>
+			Grade Receieved : {{ subactivity.subgrade_earned }}
 		</li>
 		<li>
 			<a href="/GT/editsubactivity/{{ subactivity.id}}/">Edit Subactivity</a>
