--- a/GradeTracker/templates/GradeTracker/detail.html
+++ b/GradeTracker/templates/GradeTracker/detail.html
@@ -15,10 +15,11 @@
 {% for course in courses %}
    <h3><a href="/GT/{{ student.id }}/{{ course.id }}/"> {{ course.course_name }} </a></h3>
    <div>
+   	<h2>Grade: {{ grades.forloop.counter}} </h2>
    	<ul>
 		<ol><span style="margin-left:-30px"><strong>Activties:</strong></span>
 		{% for activity in course.graded_activities_set.all %}
-			<li style="margin-left:-10px">{{ activity.activity_name }} - {{ activity.grade_weight * 100 }}</li>
+			<li style="margin-left:-10px">{{ activity.activity_name }}</li>
 			{% if activity.subgraded_activities_set.all %}
 				<ol><strong>Subactivities:</strong>
 				{% for subactivity in activity.subgraded_activities_set.all %}
