--- a/GradeTracker/templates/GradeTracker/detail.html
+++ b/GradeTracker/templates/GradeTracker/detail.html
@@ -14,13 +14,13 @@
 {{courses}}
 
 <div id="accordion" >
-{% for course in courses %}
-   <h3><a href="/GT/{{ student.id }}/{{ course.id }}/"> {{ course.course_name }} </a></h3>
+{% for course in grades %}
+   <h3><a href="/GT/{{ student.id }}/{{ course.id }}/"> {{ course.0.course_name }} </a></h3>
    <div>
-   	<h2>Grade: {{ grades.{{forloop.counter}} }} </h2>
+   	<h2>Grade: {{ grades.1 }} </h2>
    	<ul>
 		<ol><span style="margin-left:-30px"><strong>Activties:</strong></span>
-		{% for activity in course.graded_activities_set.all %}
+		{% for activity in course.0.graded_activities_set.all %}
 			<li style="margin-left:-10px">{{ activity.activity_name }}</li>
 			{% if activity.subgraded_activities_set.all %}
 				<ol><strong>Subactivities:</strong>
@@ -38,16 +38,16 @@
 		{% endfor %}
 		</ol>
 		<li>
-			<a href="/GT/{{ student.id }}/{{ course.id }}/">Add Activities</a>
+			<a href="/GT/{{ student.id }}/{{ course.0.id }}/">Add Activities</a>
 		</li>
 		<li>
-			<a href="/GT/editcourse/{{ course.id }}/">Edit Course Information</a>
+			<a href="/GT/editcourse/{{ course.0.id }}/">Edit Course Information</a>
 		</li>
 		<li>
-			<div><a href="/GT/deleteCourse/{{ course.id }}/" > Delete Course </a></div>
+			<div><a href="/GT/deleteCourse/{{ course.0.id }}/" > Delete Course </a></div>
 		</li>
 		<li>
-			<div><a href="/GT/whatIf/{{ course.id }}/" > What If Analysis </a></div>
+			<div><a href="/GT/whatIf/{{ course.0.id }}/" > What If Analysis </a></div>
 		</li>
 	</ul>
     </div>
