--- a/GradeTracker/templates/GradeTracker/detail.html
+++ b/GradeTracker/templates/GradeTracker/detail.html
@@ -20,7 +20,7 @@
    	<ul>
 		<ol><span style="margin-left:-30px"><strong>Activties:</strong></span>
 		{% for activity in course.0.graded_activities_set.all %}
-			<li style="margin-left:-10px">{{ activity.activity_name }}</li>
+			<li style="margin-left:-10px">{{ activity.activity_name }}  -- {{ activity.grade_earned }} / 1.0</li>
 			{% if activity.subgraded_activities_set.all %}
 				<ol><strong>Subactivities:</strong>
 				{% for subactivity in activity.subgraded_activities_set.all %}
