--- a/googleapi/templates/plus/welcome.html
+++ b/googleapi/templates/plus/welcome.html
@@ -8,6 +8,7 @@
     </style>
   </head>
   <body>
+    {{activitylist }}
     <table border=1>
       {% for item in activitylist.items %}
       <tr><td>{{ item.object.content|safe }}</td></tr>
