perfecting menu, added student.id ad parameter in what-if url

--- a/GradeTracker/templates/GradeTracker/welcome.html
+++ b/GradeTracker/templates/GradeTracker/welcome.html
@@ -1,10 +1,6 @@
 {% extends "GradeTracker/basepage.html" %}
 {% block menubar %}
-	  <li><a href="/GT/">Home</a></li>
-	  <li><a href="/GT/accounts/login/">Login</a></li>
-          <li><a href="/GT/{{ student_list.0.id}}/">Classes</a></li>
-          <li><a href="/GT/google">GCal</a></li>
-          <li><a href="/GT/accounts/logout">Logout</a></li>
+          <li><a href="/GT/accounts/login">Login</a></li>
 {% endblock %} 
 
 {% block content %}
