--- a/GradeTracker/templates/GradeTracker/detail.html
+++ b/GradeTracker/templates/GradeTracker/detail.html
@@ -1,6 +1,5 @@
 {% extends "GradeTracker/basepage.html" %}
 {% block menubar %}
-	  <li><a href="/GT/">Home</a></li>
           <li><a href="/GT/{{ student.id }}/">Class</a></li>
           <li><a href="/GT/{{ student.id }}/account">Account Info</a></li>
           <li><a href="/GT/{{ student.id }}/accountedit">Edit Account</a></li>
@@ -46,7 +45,7 @@
 			<div><a href="/GT/deleteCourse/{{ course.0.id }}/" > Delete Course </a></div>
 		</li>
 		<li>
-			<div><a href="/GT/whatIf/{{ course.0.id }}/" > What If Analysis </a></div>
+			<div><a href="/GT/whatIf/{{student.id}}/{{ course.0.id }}/" > What If Analysis </a></div>
 		</li>
 	</ul>
     </div>
