--- a/GradeTracker/templates/GradeTracker/logout.html
+++ b/GradeTracker/templates/GradeTracker/logout.html
@@ -1,9 +1,9 @@
 {% extends 'GradeTracker/basepage.html' %}
 
+{% block menubar %}
+          <li><a href="/GT/">Home</a></li>
+{% endblock %}
+
 {%block content %}
-
-	<h2>You have successfully logged out</h2><br />
-
-	<p>Click <a href="/GT/accounts/login/">here</a> to login again</p>
-
+	<h3>You have successfully logged out</h3>
 {% endblock %}
