--- a/GradeTracker/templates/GradeTracker/activities.html
+++ b/GradeTracker/templates/GradeTracker/activities.html
@@ -1,11 +1,9 @@
 {% extends "GradeTracker/basepage.html" %}
+
 {% block menubar %}
-          <li><a href="/GT/">Home</a></li>
-          <!-  Am only referencing list object 0, need to reference whatever student
-          name is clicked -->
-          <li><a href="/GT/{{ student.id }}/">Classes</a></li>
-          <li><a href="page.html">A Page</a></li>
-          <li><a href="another_page.html">Another Page</a></li>
+          <li><a href="/GT/{{ student.id }}/">Class</a></li>
+          <li><a href="/GT/{{ student.id }}/account">Account Info</a></li>
+          <li><a href="/GT/{{ student.id }}/accountedit">Edit Account</a></li>
           <li><a href="/GT/accounts/logout">Logout</a></li>
 {% endblock %}
 
