--- a/GradeTracker/templates/GradeTracker/detail.html
+++ b/GradeTracker/templates/GradeTracker/detail.html
@@ -1,4 +1,5 @@
 {% extends "GradeTracker/basepage.html" %}
+
 {% block menubar %}
           <li><a href="/GT/{{ student.id }}/">Class</a></li>
           <li><a href="/GT/{{ student.id }}/account">Account Info</a></li>
@@ -6,31 +7,28 @@
           <li><a href="/GT/accounts/logout">Logout</a></li>
 {% endblock %}
 
-
 {% block content %}
-<h1>{{ student.fName }}</h1>
-
 
 <div id="accordion" >
 {% for course in grades %}
    <h3><a href="/GT/{{ student.id }}/{{ course.id }}/"> {{ course.0.course_name }} </a></h3>
    <div>
-   	<h2>Grade: {{ course.1 }} </h2>
+   	<h3>Grade: {{ course.1 }} </h3>
    	<ul>
 		<ol><span style="margin-left:-30px"><strong>Activties:</strong></span>
 		{% for activity in course.0.graded_activities_set.all %}
-			<li style="margin-left:-10px">{{ activity.activity_name }}  -- {{ activity.grade_earned }} / 1.0</li>
+			<li style="margin-left:-10px">{{ activity.activity_name }} : {{ activity.grade_earned }}</li>
 			{% if activity.subgraded_activities_set.all %}
-				<ol><strong>Subactivities:</strong>
+				<ol><span style="margin-left:-30px"><strong>Subactivities:</strong></span>
 				{% for subactivity in activity.subgraded_activities_set.all %}
 					{% if subactivity.main_category == activity %}
-						<li style="margin-left:20px">{{ subactivity.subactivity_name }}</li>
+						<li>{{ subactivity.subactivity_name }} : {{subactivity.subgrade_earned}}</li>
 					{% endif %}
 					{% empty %}
 					<li>None</li>
 				{% endfor %}
+				</ol>
 			{% endif %}
-			</ol>
 		{% empty %}
 			<li>None</li>
 		{% endfor %}
@@ -54,6 +52,8 @@
 
 <br>
 <div>
+<h3 style="font-size: 20px">Add Course</h3>
+
 <form action="/GT/{{ student.id }}/" method="post">{% csrf_token %}
 {{ form.as_p }}
 <input type="submit" value="Submit" />
