--- a/GradeTracker/templates/GradeTracker/account.html
+++ b/GradeTracker/templates/GradeTracker/account.html
@@ -1,11 +1,4 @@
-{% extends "GradeTracker/basepage.html" %}
-
-{% block menubar %}
-          <li><a href="/GT/{{ student.id }}/">Class</a></li>
-          <li><a href="/GT/{{ student.id }}/account">Account Info</a></li>
-          <li><a href="/GT/{{ student.id }}/accountedit">Edit Account</a></li>
-          <li><a href="/GT/accounts/logout">Logout</a></li>
-{% endblock %}
+{% extends "GradeTracker/li_basepage.html" %}
 
 {% block content %}
 <form action="/GT/{{ student.id }}/accountedit" method="post">{% csrf_token %}
