--- a/GradeTracker/templates/GradeTracker/activities.html
+++ b/GradeTracker/templates/GradeTracker/activities.html
@@ -1,11 +1,5 @@
-{% extends "GradeTracker/basepage.html" %}
+{% extends "GradeTracker/li_basepage.html" %}
 
-{% block menubar %}
-          <li><a href="/GT/{{ student.id }}/">Class</a></li>
-          <li><a href="/GT/{{ student.id }}/account">Account Info</a></li>
-          <li><a href="/GT/{{ student.id }}/accountedit">Edit Account</a></li>
-          <li><a href="/GT/accounts/logout">Logout</a></li>
-{% endblock %}
 
 {% block content %}
 <h1>{{ activity.activity_name }}</h1>
