Added checkboxes to moving total slider

--- a/GradeTracker/templates/GradeTracker/grades.html
+++ b/GradeTracker/templates/GradeTracker/grades.html
@@ -29,6 +29,9 @@
 		<li>
 			 <a href="/GT/deleteactivity/{{ activity.id }}/" >Delete Activity </a>
 		</li>
+		<li>
+			<a href="/GT/whatIf/{{student.id}}/{{course.id}}/">What If Anlaysis</a>
+		</li>
 	</ul>
    </div>
 {% endfor %}
