working on adding links to menu bar

--- a/GradeTracker/templates/GradeTracker/li_basepage.html
+++ b/GradeTracker/templates/GradeTracker/li_basepage.html
@@ -3,6 +3,8 @@
 {% block menubar %}
           <li><a href="/GT/{{ student.id }}/">Class</a></li>
           <li><a href="/GT/{{ student.id }}/account">Account Info</a></li>
-          <li><a href="/GT/{{ student.id }}/accountedit">Edit Account</a></li>
+	  <li><a href="/goog">Export Dates</a></li>
+	  <li><a href="/GT/searchtemplate">Search Classes</a></li>
           <li><a href="/GT/accounts/logout">Logout</a></li>
+	  <li><a href="/GT/about">About us</a></li>
 {% endblock %}
