--- a/googleapi/templates/plus/welcome.html
+++ b/googleapi/templates/plus/welcome.html
@@ -1,4 +1,6 @@
+{% extends GradeTracker/li_basepage.html %}
 
+<!-- 
 <html>
   <head>
     <title>Your Google+ Activity</title>
@@ -8,11 +10,15 @@
     </style>
   </head>
   <body>
+  -->
+  {% block content %}
     {{activitylist }}
     <table border=1>
       {% for item in activitylist.items %}
       <tr><td>{{ item.object.content|safe }}</td></tr>
       {% endfor %}
     </table>
-  </body>
-</html>
+
+    {% endblock %}
+<!--  </body>
+</html> -->
