before deleting unnecessary files

--- a/GradeTracker/templates/GradeTracker/welcome.html
+++ b/GradeTracker/templates/GradeTracker/welcome.html
@@ -1,6 +1,7 @@
 {% extends "GradeTracker/basepage.html" %}
 {% block menubar %}
           <li><a href="/GT/accounts/login">Login</a></li>
+	  <li><a href="/GT/forgot/">Forgot Password</a></li>
 {% endblock %} 
 
 {% block content %}
