--- a/googleapi/templates/plus/welcome.html
+++ b/googleapi/templates/plus/welcome.html
@@ -1,24 +1,9 @@
 {% extends "GradeTracker/li_basepage.html" %}
 
-<!-- 
-<html>
-  <head>
-    <title>Your Google+ Activity</title>
-    <style type=text/css>
-      td  { vertical-align: top; padding: 0.5em }
-      img { border:0 }
-    </style>
-  </head>
-  <body>
-  -->
   {% block content %}
-    {{activitylist }}
-    <table border=1>
-      {% for item in activitylist.items %}
-      <tr><td>{{ item.object.content|safe }}</td></tr>
+    <h2>The following items have been successfully added to your calendar</h2>
+      {% for item in activitylist %}
+      	<p>{{ item.0 }} : {{item.1}}<p></br>
       {% endfor %}
-    </table>
 
     {% endblock %}
-<!--  </body>
-</html> -->
