deleted unnecessary files

--- a/GradeTracker/templates/GradeTracker/activities.html
+++ b/GradeTracker/templates/GradeTracker/activities.html
@@ -15,6 +15,9 @@
 			Grade Receieved : {{ subactivity.subgrade_earned }}
 		</li>
 		<li>
+			Due Date : {{ subactivity.subgrade_due_date }}
+		</li>
+		<li>
 			<a href="/GT/editsubactivity/{{ subactivity.id}}/">Edit Subactivity</a>
 		</li>
 		<li>
