--- a/GradeTracker/templates/GradeTracker/grades.html
+++ b/GradeTracker/templates/GradeTracker/grades.html
@@ -13,6 +13,9 @@
 		<li>
 			<h4>Grade: {{ activity.grade_earned }}</h4>
 		</li>
+		<li>
+			<h4>Due Date: {{activity.grade_due_date}}</h4>
+		</li>
       		<li>
         		<a href="/GT/editactivity/{{activity.id}}" >Edit Activity </a>
       		</li>
