forgot password working

--- a/GradeTracker/templates/GradeTracker/accountInfo.html
+++ b/GradeTracker/templates/GradeTracker/accountInfo.html
@@ -25,6 +25,9 @@
 		<li>
 			<p>Institution: {{ student.Institution }}</p>
 		</li>
+		<li>
+			<p><a href="/GT/{{ student.id }}/accountedit">Edit Account</a></p>
+		</li>
 	</ul>
    </div>
 </div>
